--- a/Css/videoTemplate.css
+++ b/Css/videoTemplate.css
@@ -34,7 +34,7 @@ header{
      height: 35px;
      width: 125px;
      margin-left: 10px;
-     background: url(../Img/logo.png);
+     background: url('https://lh3.googleusercontent.com/pw/AM-JKLW1SuEJDAggtNh_r8m2mpafbKzN8k63HlI5sqUxeJJTizSGnxyI-nBR5xfybe9wXrDGDFBNXSRe-Q1qHBQW7fEgUCLN0DLwv1hoFj8V1Pdjx-YPvfXBcNgI6oZbCNq3G0XL73GQv0bS6DVqiOvx-dCI=w720-h200-no');
      background-size: cover;
 }
 
