--- a/Css/Config/anuncio.css
+++ b/Css/Config/anuncio.css
@@ -1,4 +1,4 @@
 .bannerAd{
-     background: url(../../Img/ad.jpg);
+     background: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ_YzYz0UZnThGSp84p92ZA97o6PIZpEKjaEg&usqp=CAU);
      background-size: cover;
 }
